--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,62 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body * {
+  font-family: 'Inter', sans-serif;
+  color: white;
+}
+
 body {
-  background: black;
-  color: aliceblue;
+  /* shortshand */
+  background: url('/assets/bg-desktop.svg') no-repeat top center/cover;
+  display: flex;
+  justify-content: center;
+
+  align-content: center;
+  min-height: 100vh;
+}
+
+.container {
+  background: green;
+
+  width: 588px;
+  height: 712px;
+  margin: auto;
+}
+
+.profile {
+  text-align: center;
+  padding: 24px;
+}
+
+.profile img {
+  width: 112px;
+  height: 106px;
+  border-radius: 50%;
+
+  border: solid 2px rebeccapurple;
+}
+
+.profile p {
+  font-weight: 500;
+  line-height: 24px;
+  margin-top: 8px;
+}
+
+.container_switch {
+}
+
+.container_button_links {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+}
+
+.container_social_media {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
 }
