--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,11 +20,11 @@ body {
 }
 
 .container {
-  background: green;
-
   width: 588px;
   height: 712px;
   margin: auto;
+
+  padding: 24px;
 }
 
 .profile {
@@ -37,7 +37,7 @@ body {
   height: 106px;
   border-radius: 50%;
 
-  border: solid 2px rebeccapurple;
+  border: solid 2px white;
 }
 
 .profile p {
@@ -49,10 +49,38 @@ body {
 .container_switch {
 }
 
-.container_button_links {
+.container_button_links,
+ul {
   display: flex;
   flex-direction: column;
-  padding: 24px;
+  gap: 16px;
+}
+
+li {
+  list-style: none;
+  border: solid 1px white;
+  border-radius: 8px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(4px);
+}
+
+li:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+a {
+  text-decoration: none;
+  font-size: medium;
+  color: white;
+
+  padding: 16px 24px;
+  font-weight: 500;
+  transition: background 0.2s;
 }
 
 .container_social_media {
